--- a/Project.toml
+++ b/Project.toml
@@ -1,2 +1,6 @@
+name = "AquaplanetIslands"
+[compat]
+julia = "1.7.1"
+DrWatson = "2.9.1"
 [deps]
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
