--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,24 @@
 data
 videos
 plots
-notebooks
+notebooks/*.png
 _research
+/Manifest.toml
+logs/
+papers/
+references/**/*.pdf
+run/
+Run/
+exp/run_*
+exp/prm/*sample*
+*.gif
+*.mp4
+*.github
+
+# Ignore CESM folders
+builds
+codebase
+inputdata
 
 ################################################################################
 #                                    Julia                                     #
