--- a/.gitignore
+++ b/.gitignore
@@ -24,7 +24,7 @@ exp/prm/*sample*
 builds
 codebase
 inputdata
-cases
+cases/*.case
 userdata
 
 ################################################################################
